--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA2Ffa41TeRVxDN3-Xt29TwKmYLH7g-qpc" />
+            android:value="YOUR_GOOGLE_MAP_API_KEY" />
 
         <activity
             android:launchMode="singleTop"
